# EntryPoint

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CreateAllTable.sql  DropAllTable.sql  FunctionsForCreateAllTables.cpp  FunctionsForCreateAllTables.hpp  FunctionsForTable_all_people.cpp  FunctionsForTable_all_people.hpp  README.md  TODO.cpp  TODO.md  deleteAll.cpp  main.cpp  test_students
.github/workflows/: CppCheck-Analysis.yml  ci.yml  clang-checks.yml  clang-format-check.yml  clang-tidy.yml  cppcheck.yml  installing-dependencies.yml
CreateTables/: CreateTableCategories.cpp  CreateTableCategoryTags.cpp  CreateTableFeedbackRequest.cpp  CreateTableFeedbackUrl.cpp  CreateTableFilterExcludes.cpp  CreateTableFilterIncludes.cpp  CreateTableFilters.cpp  CreateTablePeople.cpp  CreateTablePeopleSubject.cpp  CreateTablePersonFilterAccess.cpp  CreateTablePersonRole  CreateTablePrograms.cpp  CreateTableResultRequest.cpp  CreateTableRoles.cpp  CreateTableStudents.cpp  CreateTableSubjects.cpp  CreateTableTags.cpp  CreateTableTeacherSubject.cpp  CreateTeacherSubject.cpp
DataBase/: CMakeLists.txt  main.cpp
DataBase/include/: Course.hpp  Dop_Functions.hpp  InteractionsWithTables.hpp  People_Group.hpp  Person.hpp  Person_Role.hpp  Program.hpp  Role.hpp  SOP_Form.hpp  Subject.hpp  Subject_Offer.hpp  TESTS.hpp  Teaching_Assigment.hpp
DataBase/source/: Course.cpp  CreateAllTable.sql  DeleteAllTable.sql  Dop_Functions.cpp  InteractionsWithTables.cpp  People_Group.cpp  Person.cpp  Person_Role.cpp  Program.cpp  Role.cpp  SOP_Form.cpp  Subject.cpp  Subject_Offer.cpp  TESTS.cpp  Teaching_Assigment.cpp
Google API/inc/: logger.hpp  manageSOP.hpp
Google API/json/: formTitle.json  headerOfQuestionsBlock.json  overallQuestion.json  scaleQuestion.json
Google API/src/: logger.cpp  main.cpp  manageSOP.cpp  pre_main.cpp
Google API/tests/: test_manageSOP.cpp
cmake/: CPM.cmake
inc/: BaseCrud.hpp  Categories.hpp  CategoryTags.hpp  CreateAllTables.hpp  DeleteAllTables.hpp  FeedBackRequest.hpp  FeedBackURL.hpp  Feedback.hpp  Feedback_Participants.hpp  FilterExcludes.hpp  FilterIncludes.hpp  Filters.hpp  ForTableInternal.hpp  FunctionForAdmin.hpp  IPrimaryKeyEntity.hpp  OfficeStaff.hpp  People.hpp  PeopleSubject.hpp  PersonFilterAccess.hpp  PersonRole.hpp  Programs.hpp  ResultRequest.hpp  Roles.hpp  Student.hpp  Students.hpp  SubjectTags.hpp  Subjects.hpp  Tags.hpp  Teacher.hpp  TeacherSubject.hpp  Tutor.hpp  User.hpp  manageSOP.hpp
include/: BaseCrud.hpp  Categories.hpp  CategoryTags.hpp  DeleteAllTables.hpp  DopMethodsForDatabase.hpp  FeedBackRequest.hpp  FeedBackURL.hpp  FilterExcludes.hpp  FilterIncludes.hpp  Filters.hpp  IPrimaryKeyEntity.hpp  OfficeStaff.hpp  People.hpp  PeopleSubject.hpp  PersonFilterAccess.hpp  PersonRole.hpp  Programs.hpp  ResultRequest.hpp  Roles.hpp  Student.hpp  Students.hpp  SubjectTags.hpp  Subjects.hpp  Tags.hpp  Teacher.hpp  TeacherSubject.hpp  User.hpp  sop.hpp
json/: formQuestion1.json
new_Version/: CMakeLists.txt  CreateAllTable.sql  main.cpp
new_Version/include/: Course.hpp  Dop_Functions.hpp  People_Group.hpp  Person.hpp  Program.hpp  SOP_Form.hpp  Subject.hpp  Subject_Offer.hpp  TESTS.hpp  Teaching_Assigment.hpp
new_Version/source/: Course.cpp  Dop_Functions.cpp  InteractionsWithTables.cpp  People_Group.cpp  Person.cpp  Person_Role.cpp  Program.cpp  Role.cpp  SOP_Form.cpp  Subject.cpp  Subject_Offer.cpp  TESTS.cpp  Teaching_Assigment.cpp
source/: Categories.cpp  CategoryTags.cpp  CreateAllTable.sql  DeleteAllTable.cpp  DopMethodsForDatabase.cpp  FeedBackRequest.cpp  FeedBackURL.cpp  FilterExcludes.cpp  FilterIncludes.cpp  Filters.cpp  OfficeStaff.cpp  People.cpp  PeopleSubject.cpp  PersonFilterAccess.cpp  PersonRole.cpp  Programs.cpp  ResultRequest.cpp  Roles.cpp  Student.cpp  Students.cpp  SubjectTags.cpp  Subjects.cpp  Tags.cpp  Teacher.cpp  TeacherSubject.cpp  Tutor.cpp  main.cpp  statistics.cpp
src/: Categories.cpp  CategoryTags.cpp  CreateAllTable.cpp  CreateAllTables.cpp  DeleteAllTables.cpp  FeedBackRequest.cpp  FeedBackURL.cpp  Feedback.cpp  Feedback_Participants.cpp  FilterExcludes.cpp  FilterIncludes.cpp  Filters.cpp  ForTableInternal.cpp  FunctionForAdmin.cpp  OfficeStaff.cpp  People.cpp  PeopleSubject.cpp  PersonFilterAccess.cpp  PersonRole.cpp  Programs.cpp  ResultRequest.cpp  Roles.cpp  Student.cpp  Students.cpp  SubjectTags.cpp  Subjects.cpp  Tags.cpp  Teacher.cpp  TeacherSubject.cpp  Tutor.cpp  User.cpp  main.cpp  manageSOP.cpp
tests/: AllTests.cpp  TestCategoryTags.cpp  TestPeople.cpp  TestPeopleSubject.cpp  TestPrograms.cpp  TestRoles.cpp  TestStudents.cpp  bigTest.cpp  test_manageSOP.cpp
tgBot/: CMakeLists.txt
tgBot/include/: OfficeStaff.hpp  Tutor.hpp  User.hpp  sop.hpp  statistics.hpp
tgBot/source/: Student.cpp  Teacher.cpp  Tutor.cpp  User.cpp  main.cpp
